--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -38,7 +38,10 @@ body {
 }
 
 body, input, select, textarea {
-  font: 500 1rem Inter sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: Inter, sans-serif;
+  
   color: var(--gray-500)
 }
 
