--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -24,6 +24,28 @@
     font-weight: 600
   }
 
+  .currentEpisode {
+    text-align: center;
+
+    img {
+      border-radius: 1.5rem;
+    }
+
+    strong {
+      display: block;
+      margin-top: 2rem;
+      font: 600 1.25rem Lexend, sans-serif;
+      line-height: 1.75rem;
+    }
+
+    span {
+      display: block;
+      margin-top: 1rem;
+      opacity: 0.6;
+      line-height: 1.5rem;
+    }
+  }
+
   .emptyPlayer {
     width: 100%;
     height: 20rem;
@@ -85,17 +107,21 @@
     border: none;
     font-size: 0;
 
+    &:disabled {
+      cursor: not-allowed;
+    }
+
     &.playButton {
       width: 4rem;
       height: 4rem;
       border-radius: 1rem;
       background: var(--purple-400);
-      transition: all 0.2s;
-    }
+      transition: filter 0.2s;
 
-    &.playButton:hover {
-      filter: brightness(0.8);
-      transition: all 0.2s;
-    }
+      &:hover {
+        filter: brightness(0.95);
+        transition: filter 0.2s;
+      }
+    }    
   }
 }
