--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -17,7 +17,7 @@
     gap: 1.5rem;
 
     li {
-      background: var(--white);
+      background: var(--background);
       border-top: 1px solid var(--gray-100);
       padding: 1.25rem;
       border-radius: 1.5rem;
@@ -92,7 +92,7 @@
         width: 2.5rem;
         height: 2.5rem;
 
-        background: var(--white);
+        background: var(--background);
         border: 1px solid var(--gray-100);
 
         border-radius: 0.675rem;
@@ -159,7 +159,7 @@
         width: 2rem;
         height: 2rem;
 
-        background: var(--white);
+        background: var(--background);
         border: 1px solid var(--gray-100);
 
         border-radius: 0.5rem;
