--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -4,7 +4,7 @@
 
   padding: 3rem 4rem;
 
-  background: var(--purple-500);
+  background: var(--primary-500);
   color: var(--white);
 
   display: flex;
@@ -49,9 +49,9 @@
   .emptyPlayer {
     width: 100%;
     height: 20rem;
-    border: 1.5px dashed var(--purple-300);
+    border: 1.5px dashed var(--primary-300);
     border-radius: 1.5rem;
-    background: linear-gradient(143.8deg, rgba(145, 100, 250, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
+    background: var(--linear-background);
 
     padding: 4rem;
     text-align: center;
@@ -90,7 +90,7 @@
   .emptySlider {
     width: 100%;
     height: 4px;
-    background: var(--purple-300);
+    background: var(--primary-300);
     border-radius: 2px;
   }
 }
@@ -123,7 +123,7 @@
       width: 4rem;
       height: 4rem;
       border-radius: 1rem;
-      background: var(--purple-400);
+      background: var(--primary-400);
       transition: filter 0.2s;
 
       &:hover {
